--- a/business-central/ui-search-filter-faq.yml
+++ b/business-central/ui-search-filter-faq.yml
@@ -9,14 +9,14 @@ metadata:
   ms.search.keywords: keyboarding, productivity, how do i, filter pane
   ms.date: 04/01/2021
   ms.author: mikebc
-  ms.openlocfilehash: 782afb4a5cc811f950226d5812558055772edcad
-  ms.sourcegitcommit: 921f0c4043dcda2fb8fc35df1b64310bf32270d7
+  ms.openlocfilehash: 708033d8d803aebb871a83237962078bc6ab6a4f
+  ms.sourcegitcommit: e562b45fda20ff88230e086caa6587913eddae26
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/11/2021
-  ms.locfileid: "6017319"
+  ms.lasthandoff: 06/30/2021
+  ms.locfileid: "6325844"
 title: Vanliga frågor och svar om sök och filtrering
-summary: Den här artikeln besvarar vanliga frågor som du kanske har om att söka och filtrera.
+summary: Den här artikeln besvarar vanliga frågor som du kanske har om att söka och filtrera i Business Central.
 sections:
 - name: Har ignorerats
   questions:
