--- a/business-central/ui-mobile-faq.yml
+++ b/business-central/ui-mobile-faq.yml
@@ -9,14 +9,14 @@ metadata:
   ms.tgt_pltfrm: na
   ms.workload: na
   ms.search.keywords: phone, tablet
-  ms.date: 04/01/2021
+  ms.date: 10/25/2021
   ms.author: edupont
-  ms.openlocfilehash: 81887822a3163a7fee0d027ac1969545990f749a
-  ms.sourcegitcommit: f9a190933eadf4608f591e2f1b04c69f1e5c0dc7
+  ms.openlocfilehash: f0d31833373014ac5f1f089537bf03091540e223
+  ms.sourcegitcommit: a9e2aaee735870af566db68532cfa697347d68e0
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/28/2021
-  ms.locfileid: "6116008"
+  ms.lasthandoff: 11/04/2021
+  ms.locfileid: "7752536"
 title: Vanliga frågor och svar om mobilappar
 summary: "I denna artikel besvaras frågor som våra erfarna användare ofta ställer om mobilapparna för [!INCLUDE [prod_short](includes/prod_short.md)].  \n"
 sections:
@@ -85,4 +85,7 @@ sections:
   - question: >
       Kan jag ansluta appen till vår lokala lösning?
     answer: "Ja det kan du. Sätten att logga in skiljer sig något åt – det är allt. Mer information finns i [Använda Business Central lokalt?](install-mobile-app.md#using-business-central-on-premises).  \n"
+  - question: >
+      Kan en gäst användare använda appen för att komma åt vår Business Central-lösning?
+    answer: "Nr Gäst användare är inbjudna användare från en annan Azure Active Directory (AD)-klientorganisation än din. I det här fallet autentiserar appen den primära Azure AD klientorganisation av gästanvändaren och försöker öppna Business Central slutpunkten för klientorganisationen i stället för din.  \n"
 additionalContent: "\n## <a name=\"see-also\"></a>Se även\n\n[Få Business Central på din mobila enhet](install-mobile-app.md)  \n[Installera appen Business Central för Microsoft Teams](across-install-app-for-teams.md)  \n\n[!INCLUDE[footer-include](includes/footer-banner.md)]"
