--- a/business-central/ui-mobile-faq.yml
+++ b/business-central/ui-mobile-faq.yml
@@ -11,12 +11,12 @@ metadata:
   ms.search.keywords: phone, tablet
   ms.date: 10/25/2021
   ms.author: edupont
-  ms.openlocfilehash: f0d31833373014ac5f1f089537bf03091540e223
-  ms.sourcegitcommit: a9e2aaee735870af566db68532cfa697347d68e0
+  ms.openlocfilehash: 96e8f34b31ba1f7db375c567da4ec9cf9375bdc5
+  ms.sourcegitcommit: a6000804ad9a176de5750372d3951547ddb71006
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 11/04/2021
-  ms.locfileid: "7752536"
+  ms.lasthandoff: 11/25/2021
+  ms.locfileid: "7865527"
 title: Vanliga frågor och svar om mobilappar
 summary: "I denna artikel besvaras frågor som våra erfarna användare ofta ställer om mobilapparna för [!INCLUDE [prod_short](includes/prod_short.md)].  \n"
 sections:
@@ -80,7 +80,7 @@ sections:
 
       | Automatiskt inmatningsfokus på första redigerbara fält på en sida | Inte tillgängligt. | Inte tillgängligt. | `Customer Card`-sida<BR /><BR />I webbläsaren kommer fokus automatiskt att riktas mot det första redigerbara fältet (t. ex. fältet `Name`), så att du kan ändra värdet direkt.<BR /><BR />I apparna för surfplatta och telefon står detta fält inte i fokus, och du måste istället markera fältet manuellt för att göra ändringar.|
   - question: >
-      Är det samma upplevelse på surfplattor och telefoner?
+      Är upplevelsen densamma på surfplattor och telefoner?
     answer: "Nästan, men inte riktigt. Se listan i avsnittet [Är det samma erfarenhet i apparna som i webbläsaren?](#is-it-the-same-experience-in-the-apps-as-in-the-browser-).  \n"
   - question: >
       Kan jag ansluta appen till vår lokala lösning?
