--- a/business-central/across-faq.yml
+++ b/business-central/across-faq.yml
@@ -65,7 +65,7 @@ sections:
       - question: |
           Var hittar jag radnumret?
         answer: |
-          Dokument som försäljningsorder och inköpsfakturor består av huvud och rader. Varje rad har ett nummer som [!INCLUDE [prod_short](includes/prod_short.md)] använder för att identifiera den aktuella raden. På grund av detta kan du se en varning eller ett felmeddelande om att något är fel i radnummer 1000. I standardversionen av [!INCLUDE [prod_short](includes/prod_short.md)] är radnumren dolda. Om du vill se radnumren måste du anpassa den aktuella sidan och lägga till **Radnr** . Lär dig hur du [anpassar arbetsytan](ui-personalization-user.md#start-personalizing-by-using-the-personalization-mode).  
+          Dokument som försäljningsorder och inköpsfakturor består av huvud och rader. Varje rad har ett nummer som [!INCLUDE [prod_short](includes/prod_short.md)] använder för att identifiera den aktuella raden. På grund av detta kan du se en varning eller ett felmeddelande om att något är fel i radnummer 1000. I standardversionen av [!INCLUDE [prod_short](includes/prod_short.md)] är radnumren dolda. Om du vill se radnumren måste du anpassa den aktuella sidan och lägga till fältet **Radnr** . Lär dig hur du [anpassar arbetsytan](ui-personalization-user.md#start-personalizing-by-using-the-personalization-mode).  
       - question: |
           Varför beskriver Hjälp funktioner som det går inte att komma åt?
         answer: |
@@ -86,7 +86,7 @@ sections:
       - question: |
           Måste jag köpa Microsoft 365?
         answer: |
-          Nej. Men om du vill uppleva [!INCLUDE[prod_short](includes/prod_short.md)] som helt integrerat med Microsoft 365 kan du prova Microsoft 365 i 1 månad gratis [här](https://products.office.com/try).  
+          Nr. Men om du vill uppleva [!INCLUDE[prod_short](includes/prod_short.md)] som helt integrerat med Microsoft 365 kan du prova Microsoft 365 i 1 månad gratis [här](https://products.office.com/try).  
 
           Om du loggar in med ett konto som inte är ett Microsoft 365-arbetskonto (såsom joe@mysolution.com), du har en Microsoft 365-prenumeration och sedan kopplar din domän (*mysolution.com*) till Microsoft 365-prenumerationen. Läs mer i [Vad är en domän?](/microsoft-365/admin/get-help-with-domains/what-is-a-domain?view=o365-worldwide&preserve-view=true) i Microsoft 365-innehållet.  
 
@@ -145,9 +145,9 @@ additionalContent: |
   [Ändra grundinställningar](ui-change-basic-settings.md)  
   [Arbeta med [!INCLUDE[prod_short](includes/prod_short.md)]](ui-work-product.md)  
   [Få svar på frågor](/dynamics365/business-central/ui-get-ready-business#getting-answers-to-questions)  
+  [Business Central-utbildning](/training/dynamics365/business-central?WT.mc_id=dyn365bc_landingpage-docs)   
   [Resurser för hjälp och support](product-help-and-support.md)  
-  [Utbildningskatalog för Business Central](readiness/readiness-learning-catalog.md)  
-  [Tilldela behörigheter till användare och grupper](ui-define-granular-permissions.md)  
+  [Tilldela användare och grupper behörigheter](ui-define-granular-permissions.md)  
   [Tillgänglighet för land/region och översättningar som stöds](/dynamics365/business-central/dev-itpro/compliance/apptest-countries-and-translations?toc=/dynamics365/business-central/toc.json)  
   [Tjänstvillkor](compliance/compliance-service-compliance.md#service-terms)  
   [Vanliga frågor och svar om utvecklar- och administratörsupplevelser](/dynamics365/business-central/dev-itpro/faq)
